[package]
name = "hypernet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "hypernet"

[[bin]]
path = "src/node.rs"
name = "hypernode"

[lib]
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

