[package]
name = "ver2"
version = "0.1.0"
authors = ["xoreo-arch <mattnappo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hypernet"
path = "src/lib.rs"

[[bin]]
name = "node"
path = "src/node/cli.rs"

[dependencies]
local-ip-address = "0.6.1"
anyhow = "1.0"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.39.3", features = ["full"] }
clap = { version = "4.5.16", features = ["derive"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.208", features = ["derive"] }
